--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
 		"issues": "https://github.com/axllent/silverstripe-minifier/issues"
 	},
     "require": {
-		"silverstripe/framework": "^4.5.1@stable",
+		"silverstripe/framework": "4.5.0@stable",
         "matthiasmullie/minify": "^1.3"
 	},
     "autoload": {
